// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowV2 renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-564oi8-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
}

<div
    class="cache-564oi8-StyledRow e1ddijpe0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;

exports[`RowV2 renders correctly with specific align 1`] = `
<DocumentFragment>
  .cache-1ca4nox-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="cache-1ca4nox-StyledRow e1ddijpe0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;

exports[`RowV2 renders correctly with specific gap 1`] = `
<DocumentFragment>
  .cache-ldau5b-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
}

<div
    class="cache-ldau5b-StyledRow e1ddijpe0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;
